Fix horizontal scrolling of index

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -35,7 +35,12 @@
   margin: auto 0
   padding: 1em
   background-color: #000000
+  width: 100%
   max-width: 950px
+  box-sizing: border-box
+
+  .hfill
+    flex-wrap: wrap
 
   h2
     margin-top: 0
